--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Jack Pham"
-  avatar           : "/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/profile_1.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Algorithmic Trading | Quantitative Research & Analytics | Finance & Accounting | Mathematical Modeling | Technical Development \n Portfolio Showcase of Independent Quantitative Research, Development & Data Science Projects"
   location         : "United States"
   email            :
