--- a/_config.yml
+++ b/_config.yml
@@ -248,9 +248,10 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: false
-      comments: # true
+      comments: true
       share: true
       related: true
 
