--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jack's Quantitative Library"
+title                    : "JP Quant Portfolio"
 title_separator          : "-"
 name                     : "Jack Pham"
-description              : "Portfolio of Independent Data Science Projects + Notes on Quantitative Research & Development"
+description              : "I like math, physics and finance"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -85,8 +85,8 @@ analytics:
 # Site Author
 author:
   name             : "Jack Pham"
-  avatar           : "/images/profile_pic.jfif" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Portfolio of Independent Data Science Projects + Notes on Quantitative Research & Development"
+  avatar           : "/images/profile_pic.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "I like math, physics and finance"
   location         : "United States"
   email            :
   uri              :
@@ -103,7 +103,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "jack-p-869b09132" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "jp-quant" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
